@@ -1,3 +1,1 @@
-DIST admin-tools-0.19.tar.xz 9208 SHA256 35ddf5fbff0c3c0ed19640b2a71fcec8bf355f1e2bc04d4ecc28390c9eb5b8f3 SHA512 e35fbe254e51021fdfb27708a10e8d0d43b0a5ffa8e3efa9ad1e2d2be71a04c1e6f50ebfebeb9f267a5c1d31281b4ac6c6656435d3161392d18b7de051ba332e WHIRLPOOL 0035b2497882b4c556098ba74a06c6ff83c576853c0e2cdf09029db0e1e1334b91dde95dafa20680c7a04b88487f8fe51de0fb8aafb37f32b35d97b6184ce0c4
-DIST admin-tools-0.20.tar.bz2 9432 SHA256 0892fe17965f399de14a12f01685a17d0edf395771027b56c036f946f49f79c1 SHA512 877ebca69b0d83f763ca75393fda9f454f8f4a90571524aef17ca535ceb049d3f04115c007eec5a860d004bb39f92885b317388f82de5042cc535a9b8d1de57c WHIRLPOOL e286d47e1488e9cabdfa446cef7de5660303dd67e087e715621db5f95b1b585b57611c7dca6442b131d436c46f3a99b9dfe7822bfc16dd0258e02233a3332a53
 DIST admin-tools-0.21.tar.xz 9260 SHA256 23c28e9f09e83bd04b616f02b1618a80c67fea94e8a17b9ea9b999625b022702 SHA512 cd1c16c4432028949f2689476823ec8f13dab12e9cc72a2b4f4e426574198aea0a3424ed1e4e1919339aefe5af5b4294a961dd9c79c2f2239d93177d9fb91c7c WHIRLPOOL 600c1f241d9b4bcf2ace1f64d1c85cb84f63c8ab6663a451540645b3f4a6d2dd535e9759c6ab181a870fc0a7dda6959e4e7e845c15f6ebca77d355ea372f057b
