@@ -1,6 +1,11 @@
 # ChangeLog for app-admin/admin-tools
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  20 Jan 2015; Justin Lecher <jlec@gentoo.org> -admin-tools-0.19.ebuild,
+  -admin-tools-0.20.ebuild, -admin-tools-0.21.ebuild,
+  +admin-tools-0.21-r1.ebuild:
+  Correctly install python scripts
 
 *admin-tools-0.21 (09 Nov 2014)
 
